--- a/projects/ios/Sample/Sample.xcodeproj/xcshareddata/xcschemes/Sample-AppleWatch.xcscheme
+++ b/projects/ios/Sample/Sample.xcodeproj/xcshareddata/xcschemes/Sample-AppleWatch.xcscheme
@@ -54,10 +54,8 @@
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
       allowLocationSimulation = "YES">
-      <RemoteRunnable
-         runnableDebuggingMode = "2"
-         BundleIdentifier = "com.apple.Carousel"
-         RemotePath = "/Sample">
+      <BuildableProductRunnable
+         runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "ABCDC1A3261D0A4C00BEEF5C"
@@ -65,7 +63,7 @@
             BlueprintName = "Sample-AppleWatch"
             ReferencedContainer = "container:Sample.xcodeproj">
          </BuildableReference>
-      </RemoteRunnable>
+      </BuildableProductRunnable>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
@@ -73,10 +71,8 @@
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
       debugDocumentVersioning = "YES">
-      <RemoteRunnable
-         runnableDebuggingMode = "2"
-         BundleIdentifier = "com.apple.Carousel"
-         RemotePath = "/Sample">
+      <BuildableProductRunnable
+         runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "ABCDC1A3261D0A4C00BEEF5C"
@@ -84,16 +80,7 @@
             BlueprintName = "Sample-AppleWatch"
             ReferencedContainer = "container:Sample.xcodeproj">
          </BuildableReference>
-      </RemoteRunnable>
-      <MacroExpansion>
-         <BuildableReference
-            BuildableIdentifier = "primary"
-            BlueprintIdentifier = "ABCDC1A3261D0A4C00BEEF5C"
-            BuildableName = "Sample-AppleWatch.app"
-            BlueprintName = "Sample-AppleWatch"
-            ReferencedContainer = "container:Sample.xcodeproj">
-         </BuildableReference>
-      </MacroExpansion>
+      </BuildableProductRunnable>
    </ProfileAction>
    <AnalyzeAction
       buildConfiguration = "Debug">
