--- a/files/docs/default/mkdocs.yml
+++ b/files/docs/default/mkdocs.yml
@@ -24,6 +24,7 @@ nav:
   - Distribution: "distribution.md"
   - Glue code: "glue-code.md"
   - Code tools: "code-tools.md"
+  - Apple: "apple.md"
   - Projects: "projects.md"
   - Other projects: "other-projects.md"
   - Training: "training.md"
