--- a/files/docs/default/mkdocs.yml
+++ b/files/docs/default/mkdocs.yml
@@ -14,19 +14,19 @@ extra:
 copyright: Copyright &copy; 2021 Ezored
 nav:
   - Home: "index.md"
-  - Free: "free.md"
+  - About: "about.md"
   - Platforms: "platforms.md"
   - Requirements: "requirements.md"
   - Modules: "modules.md"
+  - Libraries: "libraries.md"
   - Commands: "commands.md"
   - Targets: "targets.md"
-  - How to use: "how-to-use.md"
+  - How to start: "how-to-start.md"
   - Distribution: "distribution.md"
   - Glue code: "glue-code.md"
   - Code tools: "code-tools.md"
   - Apple: "apple.md"
   - Projects: "projects.md"
-  - Other projects: "other-projects.md"
   - Training: "training.md"
   - Troubleshooting: "troubleshooting.md"
   - Sponsors: "sponsors.md"
