--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -56,10 +56,10 @@ jobs:
         run: python make.py conan setup
 
       - name: Ezored - Test Prepare
-        run: python make.py target test prepare
+        run: python make.py target tests prepare
 
       - name: Ezored - Test Run
-        run: python make.py target test run
+        run: python make.py target tests run
 
       - name: Ezored - Prepare
         run: python make.py target ${{ matrix.config.target }} prepare
