--- a/files/docs/default/mkdocs.yml
+++ b/files/docs/default/mkdocs.yml
@@ -26,6 +26,7 @@ nav:
   - Glue code: "glue-code.md"
   - Code tools: "code-tools.md"
   - Apple: "apple.md"
+  - Tests: "tests.md"
   - Projects: "projects.md"
   - Training: "training.md"
   - Troubleshooting: "troubleshooting.md"
