--- a/files/targets/ios/cmake/CMakeLists.txt
+++ b/files/targets/ios/cmake/CMakeLists.txt
@@ -177,4 +177,5 @@ if(NOT CMAKE_SKIP_BUILD_RPATH)
 endif()
 
 target_compile_options(${PROJECT_CONFIG_NAME} PUBLIC "${PROJECT_COMPILE_OPTIONS}")
-target_compile_definitions(${PROJECT_CONFIG_NAME} PRIVATE PROJECT_CONFIG_VERSION="${PROJECT_CONFIG_VERSION}")
+
+target_compile_definitions(${PROJECT_CONFIG_NAME} PRIVATE PROJECT_CONFIG_VERSION="${PROJECT_CONFIG_VERSION}" HAS_UNCAUGHT_EXCEPTIONS=0)
