--- a/files/targets/android/cmake/CMakeLists.txt
+++ b/files/targets/android/cmake/CMakeLists.txt
@@ -99,3 +99,4 @@ set_target_properties(
 target_compile_options(${PROJECT_CONFIG_NAME} PUBLIC "${PROJECT_COMPILE_OPTIONS}")
 
 target_compile_definitions(${PROJECT_CONFIG_NAME} PRIVATE PROJECT_CONFIG_VERSION="${PROJECT_CONFIG_VERSION}" HAS_UNCAUGHT_EXCEPTIONS=0)
+target_compile_definitions(${PROJECT_CONFIG_NAME} PRIVATE EXPERIMENTAL_AUTO_CPP_THREAD_ATTACH)
