--- a/projects/android/Sample/app/src/main/AndroidManifest.xml
+++ b/projects/android/Sample/app/src/main/AndroidManifest.xml
@@ -46,6 +46,11 @@
                 android:name="android.app.searchable"
                 android:resource="@xml/searchable" />
         </activity>
+        <activity
+            android:name=".ui.activity.WebViewActivity"
+            android:configChanges="keyboardHidden|orientation|screenSize"
+            android:launchMode="singleTop"
+            android:theme="@style/AppTheme.NoActionBar" />
     </application>
 
 </manifest>
