--- a/projects/android/Sample/app/build.gradle
+++ b/projects/android/Sample/app/build.gradle
@@ -15,6 +15,8 @@ repositories {
             dirs gradle.ext.remoteLibraryDir
         }
     }
+
+    google()
 }
 
 android {
@@ -83,11 +85,11 @@ dependencies {
         implementation project(':ezored-library')
     }
 
-    implementation 'androidx.appcompat:appcompat:1.3.0'
+    implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation 'androidx.multidex:multidex:2.0.1'
     implementation 'androidx.core:core-ktx:1.6.0'
     implementation 'androidx.vectordrawable:vectordrawable:1.1.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.0'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
     implementation 'androidx.recyclerview:recyclerview:1.2.1'
     implementation 'androidx.lifecycle:lifecycle-common-java8:2.3.1'
