--- a/files/targets/ios/cmake/CMakeLists.txt
+++ b/files/targets/ios/cmake/CMakeLists.txt
@@ -27,6 +27,11 @@ set(PROJECT_CONFIG_ARCH
     CACHE STRING "Architecture"
 )
 
+set(PROJECT_CONFIG_PLATFORM_ARCH
+    "arm64"
+    CACHE STRING "Platform Architecture"
+)
+
 set(PROJECT_CONFIG_GROUP
     "ios"
     CACHE STRING "Group"
@@ -45,7 +50,7 @@ set(PROJECT_USE_CXX_HTTP_CLIENT
     CACHE STRING "CXX Http Client"
 )
 
-set(CMAKE_OSX_ARCHITECTURES "${PROJECT_CONFIG_ARCH}")
+set(CMAKE_OSX_ARCHITECTURES "${PROJECT_CONFIG_PLATFORM_ARCH}")
 
 set(DEVELOPMENT_TEAM_ID
     ""
