--- a/projects/web/Sample/package.json
+++ b/projects/web/Sample/package.json
@@ -16,7 +16,8 @@
     "core-js": "3.14.0",
     "vue": "3.1.1",
     "vue-axios": "3.2.4",
-    "vue-router": "4.0.9"
+    "vue-router": "4.0.9",
+    "moment": "2.29.1"    
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "4.5.13",
@@ -25,7 +26,7 @@
     "@vue/compiler-sfc": "3.1.1",
     "babel-eslint": "10.1.0",
     "eslint": "6.7.2",
-    "eslint-plugin-vue": "7.11.1",
+    "eslint-plugin-vue": "7.16.0",
     "node-sass": "6.0.0",
     "sass-loader": "10.2.0"
   },
