--- a/files/modules/app-enumerator/gluecode/yaml/customer_status_enum.yaml
+++ b/files/modules/app-enumerator/gluecode/yaml/customer_status_enum.yaml
@@ -31,7 +31,7 @@ jni:
   typename: jobject
   typeSignature: 'Lcom/ezored/enumerator/CustomerStatusEnum;'
 cs:
-  translator: '::djinni::Enum<::ezored::enumerator::CustomerStatusEnum, CustomerStatusEnum>'
+  translator: '::djinni::Enum<::ezored::enumerator::CustomerStatusEnum, ::CustomerStatusEnum>'
   header: '"CustomerStatusEnum.hpp"'
   typename: CustomerStatusEnum
   reference: false
