--- a/projects/ios/Sample/Sample.xcodeproj/xcshareddata/xcschemes/Sample-AppleWatch.xcscheme
+++ b/projects/ios/Sample/Sample.xcodeproj/xcshareddata/xcschemes/Sample-AppleWatch.xcscheme
@@ -29,7 +29,7 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "3A2F22C02214A4DA00A2FB4F"
-               BuildableName = "Sample.app"
+               BuildableName = "Ezored.app"
                BlueprintName = "Sample"
                ReferencedContainer = "container:Sample.xcodeproj">
             </BuildableReference>
