--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -1,4 +1,4 @@
-name: Ezored - Docs
+name: Docs
 
 on: [push]
 
@@ -10,7 +10,7 @@ jobs:
       fail-fast: false
       matrix:
         config:
-          - { name: "Ubuntu Latest GCC", os: ubuntu-latest }
+          - { name: "Ubuntu", os: ubuntu-latest }
         python-version: [3.7]
 
     steps:
