--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -1,4 +1,4 @@
-name: Ezored - macOS
+name: macOS
 
 on: [push]
 
@@ -10,7 +10,7 @@ jobs:
       fail-fast: false
       matrix:
         config:
-          - { name: "macOS Latest Clang", os: macos-latest, target: "macos" }
+          - { name: "macOS", os: macos-latest, target: "macos" }
         python-version: [3.7]
 
     steps:
