--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -63,7 +63,14 @@ jobs:
       - name: Ezored - Dist generate
         run: python make.py target ${{ matrix.config.target }} dist generate
 
+      - name: Github Action - Upload
+        uses: actions/upload-artifact@v2
+        with:
+          name: artifact-${{ matrix.config.target }}
+          path: build/${{ matrix.config.target }}/dist/dist.tar.gz
+
       - name: Ezored - Dist upload
+        if: startsWith(github.ref, 'refs/tags/')
         env:
           EZORED_AWS_KEY_ID: ${{ secrets.EZORED_AWS_KEY_ID }}
           EZORED_AWS_SECRET_KEY: ${{ secrets.EZORED_AWS_SECRET_KEY }}
