--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -66,12 +66,31 @@ jobs:
       - name: Github Action - Upload
         uses: actions/upload-artifact@v2
         with:
-          name: artifact-${{ matrix.config.target }}
+          name: artifact-${{ matrix.config.target }}.tar.gz
           path: build/${{ matrix.config.target }}/dist/dist.tar.gz
 
       - name: Ezored - Dist upload
-        if: startsWith(github.ref, 'refs/tags/')
+        if: startsWith(github.ref, 'refs/tags/v')
         env:
           EZORED_AWS_KEY_ID: ${{ secrets.EZORED_AWS_KEY_ID }}
           EZORED_AWS_SECRET_KEY: ${{ secrets.EZORED_AWS_SECRET_KEY }}
         run: python make.py target ${{ matrix.config.target }} dist upload --force
+
+      - name: Get release
+        id: get_release
+        uses: bruceadams/get-release@v1.2.3
+        if: startsWith(github.ref, 'refs/tags/v')
+        env:
+          GITHUB_TOKEN: ${{ github.token }}
+
+      - name: Release
+        id: upload-release-asset
+        uses: actions/upload-release-asset@v1
+        if: startsWith(github.ref, 'refs/tags/v')
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.get_release.outputs.upload_url }}
+          asset_path: build/${{ matrix.config.target }}/dist/dist.tar.gz
+          asset_name: ${{ matrix.config.target }}.tar.gz
+          asset_content_type: application/gzip
