--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -44,7 +44,7 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: artifact-docs.tar.gz
-          path: docs.tar.gz
+          path: build/docs.tar.gz
 
       - name: Ezored - Publish
         if: startsWith(github.ref, 'refs/tags/v')
@@ -68,6 +68,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.get_release.outputs.upload_url }}
-          asset_path: docs.tar.gz
+          asset_path: build/docs.tar.gz
           asset_name: docs.tar.gz
           asset_content_type: application/gzip
