--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -10,7 +10,7 @@ jobs:
       fail-fast: false
       matrix:
         config:
-          - { name: "Windows", os: windows-latest, target: "windows" }
+          - { name: "Windows", os: windows-2019, target: "windows" }
         python-version: [3.7]
 
     steps:
