--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-conan
+conan>=1.48
 boto3>=1.9.232
 botocore>=1.12.232
 mkdocs
 mkdocs-material
 mkdocs-macros-plugin
 pygments
-pygemstones
+pygemstones>=0.0.10
