fix toolchain and dependencies

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -22,22 +22,22 @@ jobs:
           python-version: ${{ matrix.python-version }}
 
       - name: Upgrade PIP
-        run: python -m pip install --upgrade pip setuptools wheel
+        run: python3 -m pip install --upgrade pip setuptools wheel
 
       - name: Display Python version
-        run: python --version
+        run: python3 --version
 
       - name: Display PIP version
-        run: pip --version
+        run: python3 -m pip --version
 
       - name: Ezored - Install python dependencies
-        run: pip install -r requirements.txt
+        run: python3 -m pip install -r requirements.txt
 
       - name: Ezored - Generate
-        run: python make.py docs generate
+        run: python3 make.py docs generate
 
       - name: Pack
-        run: python -m tarfile -c docs.tar.gz docs
+        run: python3 -m tarfile -c docs.tar.gz docs
         working-directory: build
 
       - name: Github Action - Upload
@@ -51,7 +51,7 @@ jobs:
         env:
           EZORED_AWS_KEY_ID: ${{ secrets.EZORED_AWS_KEY_ID }}
           EZORED_AWS_SECRET_KEY: ${{ secrets.EZORED_AWS_SECRET_KEY }}
-        run: python make.py docs publish --force
+        run: python3 make.py docs publish --force
 
       - name: Get release
         id: get_release
